@@ -1,5 +1,5 @@
 
-  Cache::Bounded - A size-aware in-memory cache optimized for speed - v 1.03
+  Cache::Bounded - A size-aware in-memory cache optimized for speed - VERSIONTAG
 
 ================================================================================
 SYNOPSIS:
@@ -84,6 +84,9 @@ USAGE:
     Caches the given value for the given key. The cache size is checked
     during the set method. If a purge occurs, the value is cached
     post-purge.
+    
+   purge()
+    This dumps the currently in-memory cache.
 
 ================================================================================
 KNOWN ISSUES:
@@ -110,9 +113,9 @@ KNOWN ISSUES:
 AUTHORISHIP:
 ================================================================================
 
-    Cache::Bounded v1.01 2004/04/02
+    Cache::Bounded VERSIONTAGE DATETAG
 
-    (c) 2004, Phillip Pollard <bennie@cpan.org>
+    (c) YEARTAG, Phillip Pollard <bennie@cpan.org>
     Released under the Perl Artistic License
 
     Derived from Cache::Sloppy v1.3 2004/03/02
